# wch-riscv-hal

./: .gitignore  CMakeLists.txt  CmakeCommon.cmake  CmakeReadDataSizeSymbol.cmake  README.md  main.cpp  main_backup.cpp  main_backup2.h
emulation/renode/: README.md
emulation/renode/board/: wch32v003.repl
emulation/renode/cpu/: qing-ke-v2.repl
launch/emulation/renode/: renode_start.cmd
launch/emulation/renode/cpu/: qing-ke-v2.repl
launch/real-hw/: gdb-start.cmd  openocd-start.cmd
launch/real-hw/gdb/: gdbinit  hw_script  regs.py
launch/real-hw/openocd/: regs_rv32e.xml  wch.cfg
linker/: WCH32Vxxx-universal-boot0.tpl.ld  WCH32Vxxx-universal.ld.tpl
peripheral/ch32v00x/: gpio.h  timer.h  usart.h
src/: CMakeLists.txt
src/peripheral/: base_addr.h  concept.h  obtain_reg_metadata.h  register_field_to_register.h  util.h
src/peripheral/ch32v00x/: afio.h  dma.h  dma_channels.h  gpio.h  rcc.h  timer.h  usart.h
src/peripheral/ch32v00x/field/afio/: pcfr1.h
src/peripheral/ch32v00x/field/dma/: cfgr.h  intfcr.h  intfr.h
src/peripheral/ch32v00x/field/rcc/: ahbpcenr.h  apb1pcenr.h  apb1prstr.h  apb2pcenr.h  apb2prstr.h  cfgr0.h  ctlr.h  intr.h  rstsckr.h
src/peripheral/ch32v00x/rcc/: cfgr0.h  ctlr.h  intr.h
src/peripheral/ch32v00x/utils/: dma.h
src/peripheral/common/: dma.h  gpio_common.h  gpio_pin.h  gpio_port.h
src/peripheral/common/dma/field/: cfgr.h  intfcr.h  intfr.h
src/system/: linker_utils.h  soc_types.h
src/system/CH32V003xxxx/: soc_template.h
src/system/ch32v003/: clocks.h  interrupt_vector_table.cpp  interrupts.cpp
src/system/gpio/: action.h  action_entity.h  concepts.h  config_entity.h  config_fusion.h  op.h  op_fusion.h  ops_fusion.h
src/system/memory_map/: concepts.h  peripheral_addresses.h
src/system/memory_mapped_register/: concept.h  concepts.h  register_util.h  register_utils.h
src/system/register/: access_ct.h  access_primitives.h  access_primitives_ct.h  combine.h  concept.h  concepts.h  field_access_privilege.h  util.h  utils.h
src/system/riscv/: concepts.h  csr.h  csr_access.h  csr_access_c.h  csr_access_ct.h  csr_access_extern_c.cpp  csr_access_primitives.h  csr_access_primitives_ct.h  csr_field_to_csr.h  csr_parent_from_field.h  csr_util.h  csr_utils.h  csrs_qingke.h
src/system/riscv/csr_register/: intsyscr.h  mstatus.h  mtvec.h
src/system/startup/: dma_experiment_buffer.h  entry_after_power_up.s  generated_startup_configuration.h  soc_init.c  soc_init.cpp  soc_init.h  soc_init_extern_c.cpp  soc_init_for_c.h
src/user_src/: firmware_build_info.h  main.cpp  system.h  system_clock.h  system_defines.h  system_soc.h
src/user_src/platform_configuration/: system.h  system_clock.h  system_irq.h
src/utils/: delay.h  firmware_build_info.h
src/utils/literals/: all.h  delay.h  helper_templates.h  timer.h  usart.h
system/: peripheral_addresses.h  soc_types.h
system/CH32V003xxxx/: soc.h  soc_template.h
system/CH32V003xxxx/_private/: peripheral_addresses.h
system/ch32v003/: soc.h
system/memory_map/: concepts.h  peripheral_addresses.h
system/startup/: soc_init.h
toolchains/: native-linux.cmake  wch-riscv-gcc12.cmake
user_src/: firmware_build_info.h  main.cpp  system.h
utils/: delay.h  firmware_build_info.h
utils/literals/: delay.h  helper_templates.h  timer.h  usart.h
